<resources>
    <string name="app_name">IMOTeb</string>
    <string name="my_title_string">مزاج</string>
    <string name="home">خانه</string>
    <string name="about">درباره ما</string>
    <string name="signup">ورود / ثبت نام ( به زودی )</string>
    <string name="Rate_the_app">امتیاز دادن به برنامه</string>
    <string name="share">معرفی به دوستان</string>
    <string name="eshterak">اشتراک</string>
    <string name="communication_ways">راه های ارتباطی</string>
    <string name="call_us">تماس با ما</string>
    <string name="test_mezaj">تست مزاج</string>
    <string name="txt_mezaj_records">سوابق تست مزاج شما</string>
    <string name="nav_open">Open Navigation Drawer</string>
    <string name="nav_close">Close Navigation Drawer</string>
    <string name="txt_darbareye_mezaj">درباره مزاج</string>
    <string name="txt_mezaj_chist">مزاج چیست ؟ و مزاج شناسی چگونه انجام می گیرد</string>
    <string name="txt_result"> نتیجه تست مزاج شما :</string>
    <string name="text_btn_start">شروع تست مزاج</string>
    <string name="name_mezaj">نام مزاج</string>
    <string name="desc_mezaj">توضیحات مزاج</string>
    <string name="foods">غذاها و خوراکی ها</string>
    <string name="txt_mezaj_dam">دم - گرم و تر</string>
    <string name="txt_mezaj_safra">صفرا - گرم و خشک</string>
    <string name="txt_mezaj_soda">سودا - سرد و خشک</string>
    <string name="txt_mezaj_balgham">بلغم - سرد و تر</string>
    <string name="txt_dam">دم</string>
    <string name="txt_tab_dam">گرم و تر</string>
    <string name="txt_safra">صفرا</string>
    <string name="txt_tab_safra">گرم و خشک</string>
    <string name="txt_soda">سودا</string>
    <string name="txt_tab_soda">سرد و خشک</string>
    <string name="txt_balgham">بلغم</string>
    <string name="txt_tab_balgham">سرد و تر</string>
    <string name="rb_Yes">بله</string>
    <string name="rb_No">خیر</string>
    <string name="rb_SomeTimes">گاهی</string>
    <string name="txt_tavajjoh">توجه !</string>
    <string name="txt_desc_tavajjoh">قبل از شروع تست مزاج توجه به موارد زیر بسیار با اهمیت می باشد و نتیجه تست بدون توجه به این موارد صحت ندارد.</string>
    <string name="txt_nokat">1.این تست در دوران عادت ماهانه و همچنین دوران بارداری بانوان صادق نمی باشد.\n 2.این تست برای افرادی که دچار فشار خون هستند صادق نمی باشد.\n 3.این تست برای افراد مبتلا به دیابت صادق نمی باشد.\n 4.تست مزاج برای افراد زیر 12 سال صادق نمی باشد.\n 5. به سوالات با دقت پاسخ دهید. </string>
    <string name="marhaleye_baad">مرحله بعد</string>
    <string name="more">بیشتر بخوانید</string>
    <string name="txt_tarikh_tavallod_input">لطفا تاریخ تولد خود را انتخاب کنید :</string>
    <string name="txt_marital_status">وضعیت تاهل :</string>
    <string name="txt_gender">جنسیت :</string>
    <string name="single">مجرد</string>
    <string name="married">متاهل</string>
    <string name="txt_male">مرد</string>
    <string name="txt_female">زن</string>
    <string name="txt_desc_mezaj_chist"> بدن انسان حاصل ترکیب و فعل و انفعال چهار خلط (طبع) میباشد. طبایع چهارگانه در طب، مهمترین بحث است چون تمام بیماری‌ها و سلامتی به همین طبائع چهارگانه برمی‌گردد. انسان تا وقتی طبائع چهارگانه او (چهار خلط بدن) در حالت تعادل و تساوی باشد سلامت است. این نشان می‌دهد که مسئله طبائع چهارگانه چقدر اهمیت دارد.</string>
    <string name="text_motaleye_bishtar_b">1. زن ها را دوست دارند.
2. میل به لذت ها دارند.\n
3. میل به ارتکاب حرام و شهوات دارند.\n
4. خواب آلوده و کسل هستند.\n
</string>
    <string name="txt_moshahede_natijeh">مشاهده نتیجه</string>
    <string name="txt_define_read_more">مواد تشکیل دهنده بدن از همان چهارخلط است چیزهایی که قلب را قلب و ریه را ریه و مغز را مغز کرده است، همین طبائع چهارگانه است. اگر طبائع مساوی باشد حالت اعتدال است و بالاترین حالت سلامتی است اما اگر یکی بیشتر یا کمتر بشود بدن از حالت طبیعی خارج می‌شود و این سبب بیماری است. \n به مقدار شدت زیادی یا کمی خلط، نوع بیماری مشخص می‌شود. \nمزاج پایه به معنای مزاج غالب است. مثلا تا پانزده سالگی نوعا مردم در غلبه خون هستند از پانزده تا چهل سالگی در سلطه صفرا خواهند بود به همین جهت این سال‌ها سال‌های نیرومندی است چون صفرا تند و تیز است بدن در این سال‌ها در بالاترین حالت قدرت و توان است. اما از چهل سالگی یا پنجاه سالگی تا شصت سالگی اکثر مردم درغلبه سودا هستند. حالت سنگینی و وقار دارند. اهل شتاب نیستند اهل سفارش کردن هستند چون سودا سبب حکمت و سنگینی و وقار و تدبر و موعظه می‌شود. از شصت سالگی به بعد انسان در سلطه بلغم است. این مزاج پایه است.
اما معنای مزاج پایه در طب سنتی فرق می‌کند شخص نگاه می‌کند و می‌گوید مزاج پایه او سودا است اما الان صفرا دارد. اینطور نیست بلکه مزاج فعلی است و مقتضای سن است. هر طبعی باید یک چهارم باشد و برای این حرف باید طبایع را بشناسند و این چیزی است که بشر در تشخیص آن عاجز است و نمی‌تواند بگوید هرکدام یک چهارم هست یا نه.
وقتی مزاج فعلی صفراست هرچند در سن دم یا بلغم باشد دیگر در سلطه او نخواهد بود و همان می‌شود مزاج فعلی او و در اینصورت مزاج پایه و غیر پایه ( به معنایی که در طب سنتی است ) ندارد.</string>
    <string name="txt_question_a">در مورد جواب های (بله،گاهی،خیر) توضیح بیشتر دهید؟ </string>
    <string name="txt_answer_a"> بله: اگر در اکثر موارد صدق کند.\n خیر: اگر در طول مدت مثلا یک ماه اصلا رخ ندهد.\n گاهی: اگر در همان بازه یکی دوبار اتفاق افتد.</string>
    <string name="txt_koliiat">کلیات</string>
    <string name="txt_neshaneha">نشانه ها</string>
    <string name="txt_raftar">خلق و خوی</string>
    <string name="txt_bimariha">بیماری ها</string>
    <string name="txt_darmaneh_ghalabeh">درمان غلبه</string>
    <string name="txt_dam_title">مزاج دموی</string>
    <string name="txt_dam_english">Artisan</string>
    <string name="txt_dam_mezaj_tab">طبع گرم و مرطوب</string>
    <string name="txt_dam_neshaneha">انسان‌هایی که مزاج آن‌ها گرم و‌ تر است پوستی سرخ و سفید و بدنی درشت و عضلانی دارند. این افراد نه گرمایی هستند و نه سرمایی، ولی تحمل سرما برایشان راحت ‌تر است. قدرت حرکات بدنی و قدرت هضم و اشتهای خوبی دارند و نسبت به انسان‌های دیگر دسته‌های مزاج‌های چهارگانه عروق دست برجسته تری دارند. بد نیست بدانید افراد دارای مزاج گرم و ‌تر استعداد بالاتری برای ابتلا به فشار خون و بیماری‌های قلبی دارند.</string>
    <string name="txt_dam_kholgokhoo">از نظر رفتاری، انسان‌های دموی، شجاع و جسورند و اعتماد به نفس بالایی دارند. اهل ریسک هستند و نظم و ترتیب شان از صفراوی‌ها کمتر است. میل به رهبری دارند و معمولا خوش رو، صمیمی و آرام هستند، اما اگر عصبانی شوند ممکن است دست به رفتار‌های مخاطره آمیز بزنند.</string>
    <string name="txt_dam_bimariha">دم توضیحات ناقص است</string>
    <string name="txt_dam_darman">موارد زیر برای درمان توصیه می شوند:\n حجامت - خوردن کاهو - خوردن برگ چغندر - سویق عدس - آلوی خشک - خوردن انار - شستن بدن با آب سرد (غسل کردن) - دعای مخصوص خون سوخته.</string>
    <string name="txt_safra_title">مزاج صفراوی</string>
    <string name="txt_safra_english">Idealist</string>
    <string name="txt_safra_mezaj_tab">طبع گرم و خشک</string>
    <string name="txt_safra_neshaneha">انسان‌های دارای مزاج گرم و خشک لاغر اندام هستند با استخوان بندی معمولا درشت و رنگ پوست و سفیدی چشم آن‌ها اندکی به زردی می‌زند. این افراد به شدت گرمایی هستند و در تابستان دچار مشکل می‌شوند، همچنین در بسیاری از مواقع عطش زیاد و خشکی دهان دارند.</string>
    <string name="txt_safra_kholgokhoo">اگر هنوز نمی‌دانید جزء کدام دسته از مزاج‌های چهارگانه هستید بد نیست بدانید انسان‌هایی با مزاج گرم و خشک، میل زیادی به خوردن ترشیجات(مانند لواشک، تمبر هندی، سرکه و …) و همچنین خوراکی‌های سردی مانند خیار، کاهو و هندوانه دارند و تمایل به خوردن شیرینی جات در آن‌ها کم است.</string>
    <string name="txt_safra_bimariha">موارد زیر در غلبه صفرا شایع هستند:\n سردردهای میگرنی - جوش و آکنه های ریز بیشتر در ناحیه سر و گردن - پرکاری تیرئید - سرفه های خشک - بی خوابی - سوزش هنگام ادرار بدون علت - مشکلات کیسه صفرا - صدای سوت ممتد در گوش. </string>
    <string name="txt_safra_darmen">موارد زیر برای درمان توصیه می شوند:\n برگ سنای مکی - رفع تشنگی(خرما+آب میل شود) - آلوی سیاه(زیاده روی نشود) - سبزی خرفه - گوشت بره.\n سرکه: سرکه صفرا را خاموش می کند و قلب را زنده می سازد.\n سویق عدس: سویق خشک درمان مره(صفرا و سودا) است. سویق عدس، درمان صفرا است. سویق عدس، سرد است و برای درمان صفرا و تشنگی و هفتاد نوع بیماری نافع است.\n زیتون - زبیب(کشمش) - گلابی.\n آب سرد بعد از غذا: خوردن آب بین غذا ممنوع است.\n استراحت کردن: خواب عصر مفید است البته برای کسانی که غلبه صفرا ندارند مضر است.\n داروی شافیه طب اسلامی - انار - کاسنی - داروی صفرابر طب اسلامی - حجامت.</string>
    <string name="txt_soda_title">مزاج سوداوی</string>
    <string name="txt_soda_english">Guardian</string>
    <string name="txt_soda_mezaj_tab">طبع سرد و مرطوب</string>
    <string name="txt_soda_neshaneha">بیشتر انسان‌هایی که از نظر مزاج شناسی در دسته مزاج سرد و خشک قرار می‌گیرند دارای پوستی سفیدند و به شدت با سرما مشکل دارند. در حقیقت افراد با مزاج سرد و خشک به راحتی در سرما گرم نمی‌شوند. همچنین این افراد میل زیادی (بیشتر از بقیه دسته‌های مزاج‌های چهارگانه) به خوابیدن دارند و در بسیاری از مواقع احساس ضعف می‌کنند و کم انرژی هستند.</string>
    <string name="txt_soda_kholgokhoo">این دسته از مزاج‌های چهارگانه از منظر رفتاری با خصوصیاتی مانند نظم و ترتیب و دور اندیشی زیاد شناخته می‌شوند. سوداوی مزاج‌ها همچنین بسیار دقیق و خونسردند و میل زیادی به تحلیل و ارزیابی از خود نشان می‌دهند. بد نیست بدانید بیشتر انسان‌های دارای مزاج سرد و خشک از نظر روانشناسی جزء دسته درونگرا هستند.</string>
    <string name="txt_soda_bimariha">موارد زیر در غلبه سودا شایع هستند:\n علائم سودا در پوست:\n هرگاه سودا در پوست زیاد شود بیماری کک و مک، لکه های قهوه ای و خال سیاه به وجود می آید.\n افزایش سودا موجب موی زائد و ضمختی مو نیز می شود.\n علائم سودا در بدن:\n باعث بوی بد بدن و دهان بخاطر سردی و یبوست - پوست خشک - خشکی دست و پا - بد خوابیدن و کابوس - تیرگی چهره و سیاهی دور چشم - اذیت شدن در سرما - دوستدار گرما - سردرد - کمر درد - واریس - بواسیر.\n علائم سودا در مفاصل و ستون فقرات:\n باعث خشکی و در نتیجه آرتروز می شود. و آرتروز گردن نیز بروز می کند - باعث رسوب و تنگی کانال نخاع.\n علائم سودا در مغز:\n وسواس فکری (افکار منفی) - وسواس عملی - فکر و خیال زیاد - افسردگی - استرس و اضطراب زیاد - کابوس - دائم با خود حرف زدن.\n علائم سودا در سر:\n سردرد سوداوی - با خوردن یا بو کشیدن گرمیجات آرام تر میشوند - تاری و ماتی چشم - شب کوری - وزوز گوش.\n سودا در گوارش:\n اشتها زیاد می شود اما کاذب است و توان خوردن کم - بوی بد دهان.\n علائم سودا در روده:\n باعث یبوست و خشکی و در نتیجه آن بیماریهایی از قبیل بواسیر می‌شود - نفخ شکم زیاد می‌شود. </string>
    <string name="txt_soda_darman">موارد زیر برای درمان توصیه می شوند:\n بادمجان - نوره - داروی مرکب ۷(شافیه) طب اسلامی - داروی مرکب ۱ طب اسلامی - عسل - استفراغ عمدی - داروی سودابر(افتیمون) - </string>
    <string name="txt_balgham_title">مزاج بلغمی</string>
    <string name="txt_balgham_english">Rational</string>
    <string name="txt_balgham_mezaj_tab">طبع سرد و خشک</string>
    <string name="txt_balgham_neshaneha">بلغمی مزاج‌ها بیشتر چاق و پر چربی هستند و پوست سفید و مو‌های کم پشت دارند. جالب است بدانید این افراد به نسبت دسته‌های دیگر مزاج‌های چهارگانه کمتر تشنه می‌شوند و عموما دهانشان مرطوب است. انسان‌های با مزاج سرد و‌تر را از روی ساعات زیاد خواب در طول شبانه روز می‌توان شناخت. همچنین بد نیست بدانید برای این افراد بدترین زمان سال زمستان است.</string>
    <string name="txt_balgham_kholgokhoo">از نظر رفتار شناسی بلغمی مزاج‌ها کم انرژی و یا حتی می‌توان گفت: اندکی کند هستند. در عوض آن‌ها صبور و آرامند و کمتر از افراد حاضر در دیگر مزاج‌های چهارگانه و به ندرت عصبانی می‌شوند.</string>
    <string name="txt_balgham_bimariha">بلغم توضیحات ناقص است</string>
    <string name="txt_balgham_darman">موارد زیر برای درمان توصیه می شوند:\n افطار کردن با آب گرم (فاتر) - نگاه به زن زیبا روی (محرم) - زن خوش اخلاق - درمان بلغم با سویق خشک - خرمای بُرنی - شکر طبرزد - عسل، جویدن کندر و قرائت قرآن - خوردن سیب - خوردن ساقه های ترب - خوردن پیاز - زیاد شانه زدن - مسواک زدن - حمام - روغن زیتون - کشمش - روزه گرفتن - درمان بلغم با جوارش - آویشن و نمک - آغاز غذا با آویشن، سیاه دانه، زنیان و نمک - طریفل - مرکب ۷(شافیه) طب اسلامی - درمان بلغم با  آب باران - درمان بلغم با سرمه - داروی بلغم زدای طب اسلامی.</string>
    <string name="txt_question_input">سوال خودتون رو اینجا بنویسید…</string>
    <string name="btn_send_question">ارسال</string>
    <string name="txt_temperament">Temperament</string>
</resources>