<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signup"
            android:icon="@drawable/ic_person"
            android:title="@string/signup" />
        <item
            android:id="@+id/nav_test"
            android:icon="@drawable/ic_test_mezaj"
            android:title="@string/test_mezaj"/>
        <item
            android:id="@+id/nav_mezaj_records"
            android:icon="@drawable/ic_record"
            android:title="@string/txt_mezaj_records"/>
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/Rate_the_app" />
    </group>

    <item android:title="@string/eshterak">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share"/>
        </menu>
    </item>

    <item android:title="@string/communication_ways">
        <menu>
            <item
                android:id="@+id/nav_call_us"
                android:icon="@drawable/ic_phone"
                android:title="@string/call_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>