<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:layoutDirection="rtl"
    tools:context=".MezajsTest.MezajsDetailsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aciv_back_fragment_mezajs_details"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/my_nested"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aciv_back_fragment_mezajs_details">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_background">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_mezaj_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layoutDirection="rtl">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/actv_title_mezaj"
                            style="@style/title_text_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="24dp"
                            android:textColor="@color/light_indigo"
                            android:textSize="25sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/actv_tabe_mezaj"
                            style="@style/title_text_medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="24dp"
                            android:alpha="0.8"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/actv_title_mezaj" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/actv_txt_neshaneha"
                            style="@style/title_text_large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:layout_marginBottom="24dp"
                            android:alpha="0.7"
                            android:background="@drawable/btn_bg_white"
                            android:padding="8dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/txt_neshaneha"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/actv_txt_raftar"
                            app:layout_constraintHorizontal_chainStyle="spread"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/actv_tabe_mezaj" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/actv_txt_raftar"
                            style="@style/title_text_large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.7"
                            android:background="@drawable/btn_bg_white"
                            android:padding="8dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/txt_raftar"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            app:layout_constraintEnd_toStartOf="@+id/actv_txt_bimariha"
                            app:layout_constraintStart_toEndOf="@+id/actv_txt_neshaneha"
                            app:layout_constraintTop_toBottomOf="@+id/actv_txt_neshaneha"
                            app:layout_constraintTop_toTopOf="@+id/actv_txt_neshaneha" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/actv_txt_bimariha"
                            style="@style/title_text_large"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:alpha="0.7"
                            android:background="@drawable/btn_bg_white"
                            android:padding="8dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"
                            android:text="@string/txt_bimariha"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            android:textStyle="normal"
                            app:layout_constraintBottom_toBottomOf="@+id/actv_txt_raftar"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/actv_txt_raftar"
                            app:layout_constraintTop_toTopOf="@+id/actv_txt_raftar" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_mezaj_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="6dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.80"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.01">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="160dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/aciv_mezaj_logo"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/dam_cv_logo" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/mezaj_english_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="6dp"
                                android:fontFamily="@font/dephiana_en"
                                android:text="@string/txt_dam_english"
                                android:textAllCaps="false"
                                android:textSize="20sp"
                                app:layout_constraintBottom_toTopOf="@+id/actv_temperament"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/actv_temperament"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="6dp"
                                android:fontFamily="@font/dephiana_en"
                                android:text="@string/txt_temperament"
                                android:textAllCaps="false"
                                android:textSize="18sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/mezaj_english_name" />

                            <androidx.appcompat.widget.AppCompatImageView
                                android:id="@+id/mezaj_english_logo"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_margin="6dp"
                                app:layout_constraintBottom_toBottomOf="@+id/mezaj_english_name"
                                app:layout_constraintEnd_toStartOf="@+id/mezaj_english_name"
                                app:layout_constraintTop_toTopOf="@+id/mezaj_english_name"
                                app:srcCompat="@drawable/dam_logo" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_mezaj_logo">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/title_text_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/actv_title_bg"
                    android:padding="8dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/txt_neshaneha" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actv_desc_naeshanehaye_mezaj"
                    style="@style/title_text_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="6dp"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/title_text_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/actv_title_bg"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_raftar" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actv_desc_kholgokhuye_mezaj"
                    style="@style/title_text_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="6dp"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/title_text_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/actv_title_bg"
                    android:padding="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_bimariha" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actv_desc_bimarihaye_mezaj"
                    style="@style/title_text_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="6dp"
                    tools:targetApi="o" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/title_text_large"
                    android:background="@drawable/actv_title_bg"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_darmaneh_ghalabeh" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/actv_desc_darman_mezaj"
                    style="@style/title_text_medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="6dp"
                    tools:targetApi="o" />

            </LinearLayout>

            <View
                android:id="@+id/view_fragment_mezajs_details"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/gray_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_description" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/aciv_go_to_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/ll_description"
                app:layout_constraintStart_toStartOf="@+id/ll_description"
                app:layout_constraintTop_toBottomOf="@+id/view_fragment_mezajs_details"
                app:srcCompat="@drawable/ic_go_to_up" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>